update ci and cd pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,29 +7,43 @@ on:
 
 jobs:
   test:
+    name: Run Tests
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Display Trigger Information
+        run: |
+          echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+          echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+          echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
 
-      - name: Checkout code
+      - name: Checkout Repository Code
         uses: actions/checkout@v3
 
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ Setting up python to impleament test."
-      - name: Set up Python
+      - name: Confirm Repository Cloning
+        run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+
+      - name: Set Up Python Environment
+        run: echo "🖥️ Setting up Python environment for testing."
+
+      - name: Install Python
         uses: actions/setup-python@v3
         with:
           python-version: '3.9'
 
-      - run: echo "🖥️ Installing dependencies."
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+      - name: Install Dependencies
+        run: |
+          echo "📦 Installing project dependencies."
+          pip install -r requirements.txt
 
-      - run: echo "🖥️ Executing the test script."
-      - name: Run tests
-        run: pytest
+      - name: Execute Test Suite
+        run: |
+          echo "🖥️ Running tests using pytest."
+          pytest
 
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Report Test Status
+        if: always()
+        run: echo "🍏 The test job has completed with status: ${{ job.status }}."
+
+    outputs:
+      test-status: ${{ job.status }}
