--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,18 +1,64 @@
 name: CD Pipeline
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches:
       - main
 
 jobs:
   deploy:
+    name: Deploy API
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Display Deployment Trigger Information
+        run: |
+          echo "🚀 Deployment triggered by a ${{ github.event_name }} event to the main branch."
+          echo "🔄 Updating the deployed API with the latest changes."
+
+      - name: Checkout Repository Code
         uses: actions/checkout@v3
 
-      - name: Deploy API
+      - name: Connect to EC2 and Deploy API
         run: |
-          ssh user@server "cd /path/to/api && git pull && docker-compose up -d --build"
+          echo "🔗 Connecting to AWS EC2 instance to deploy API."
+          ssh ${{ user }}@${{ server }} << 'EOF'
+            echo "📂 Updating package lists."
+            sudo apt update
+            
+            echo "🐳 Checking and Installing Docker."
+            if ! command -v docker &> /dev/null; then
+              echo "Installing Docker..."
+              sudo apt install -y docker.io
+              sudo systemctl enable docker
+              sudo systemctl start docker
+            fi
+            
+            echo "🛠 Checking and Installing Docker Compose."
+            if ! command -v docker-compose &> /dev/null; then
+              echo "Installing Docker Compose..."
+              sudo apt install -y docker-compose
+            fi
+
+            echo "🌐 Checking and Installing Nginx."
+            if ! command -v nginx &> /dev/null; then
+              echo "Installing Nginx..."
+              sudo apt install -y nginx
+              sudo systemctl enable nginx
+              sudo systemctl start nginx
+            fi
+
+            echo "📂 Navigating to API directory."
+            cd /path/to/api
+            echo "🔄 Pulling latest changes from repository."
+            git pull
+            echo "🐳 Restarting API with Docker Compose."
+            docker-compose up -d --build
+
+            echo "🌐 Restarting Nginx to apply changes."
+            sudo systemctl restart nginx
+          EOF
+
+      - name: Confirm Deployment Status
+        run: echo "✅ Deployment completed successfully."
