--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Connect to EC2 and Deploy API
         run: |
           echo "🔗 Connecting to AWS EC2 instance to deploy API."
-          ssh -i ${{ DEV_KP }}.pem ${{ USER }}@${{ SERVER }} << 'EOF'
+          ssh -i ${{ secrets.DEV_KP }}.pem ${{ secrets.USER }}@${{ secrets.SERVER }} << 'EOF'
             echo "📂 Updating package lists."
             sudo apt update
             
