--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,7 +52,7 @@ jobs:
             sudo systemctl restart nginx
 
             echo "📦 Instaliing PIP."
-            sudo apt install python3-pip -y
+            sudo apt install python3-pip python3.12-venv -y
 
             echo "📦 Creating and activating a virtualenv."
             sudo python3 -m venv venv
