--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -42,7 +42,7 @@ jobs:
             fi
 
             echo "📂 Navigating to API directory."
-            chmod 777 /usr/share/nginx/html
+            sudo chmod 777 /usr/share/nginx/html
             cd /usr/share/nginx/html
 
             echo "🔄 Pulling latest changes from repository."
