--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,12 +41,8 @@ jobs:
               sudo systemctl start nginx
             fi
 
-            echo "📦 Instaliing PIP."
+            echo "📦 Installing PIP and dependencies."
             sudo apt install python3-pip python3.12-venv -y
-
-            echo "📦 Creating and activating a virtualenv."
-            sudo python3 -m venv venv
-            source venv/bin/activate
 
             echo "📂 Navigating to API directory."
             cd /usr/share/nginx/html
@@ -54,15 +50,37 @@ jobs:
             echo "🔄 Pulling latest changes from repository."
             sudo git clone https://github.com/PeterOyelegbin/hng12-stage2.git
             cd hng12-stage2
-            
-            echo "🌐 Restarting Nginx to apply changes."
-            sudo systemctl restart nginx
+
+            echo "📦 Creating and activating a virtual environment outside the Nginx folder."
+            python3 -m venv /home/${{ secrets.USER }}/venv
+            source /home/${{ secrets.USER }}/venv/bin/activate
 
             echo "📦 Installing project dependencies."
-            sudo pip install -r requirements.txt
+            pip install --no-cache-dir -r requirements.txt
+
+            echo "🛠 Configuring Nginx."
+            sudo tee /etc/nginx/sites-available/default > /dev/null <<EOL
+            server {
+                listen 80;
+                server_name yourdomain.com;
+
+                location / {
+                    proxy_pass http://127.0.0.1:8000;
+                    proxy_set_header Host $host;
+                    proxy_set_header X-Real-IP $remote_addr;
+                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                    proxy_set_header X-Forwarded-Proto $scheme;
+                }
+
+                error_page 502 /502.html;
+            }
+            EOL
+
+            echo "🔄 Restarting Nginx to apply changes."
+            sudo systemctl restart nginx
 
             echo "🚀 Starting Uvicorn server."
-            uvicorn main:app
+            nohup /home/${{ secrets.USER }}/venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000 &
 
           EOF
 
