--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Connect to EC2 and Deploy API
         run: |
           echo "🔗 Connecting to AWS EC2 instance to deploy API."
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ USER }}@${{ SERVER }} << 'EOF'
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ vars.USER }}@${{ vars.SERVER }} << 'EOF'
             # Update packages
             echo "*** 📂 Updating package lists ***"
             sudo apt update && sudo apt upgrade -y
@@ -68,8 +68,8 @@ jobs:
             [Service]
             User=ubuntu
             Group=ubuntu
-            WorkingDirectory=/home/${{ USER }}/hng12-stage2
-            ExecStart=/home/${{ USER }}/hng12-stage2/venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000
+            WorkingDirectory=/home/${{ vars.USER }}/hng12-stage2
+            ExecStart=/home/${{ vars.USER }}/hng12-stage2/venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000
             Restart=always
 
             [Install]
