--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -71,8 +71,8 @@ jobs:
               [Service]
               User=ubuntu
               Group=ubuntu
-              WorkingDirectory=/home/${{ USER }}/hng12-stage2
-              ExecStart=/home/${{ USER }}/hng12-stage2/venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000
+              WorkingDirectory=/home/${{ var.USER }}/hng12-stage2
+              ExecStart=/home/${{ var.USER }}/hng12-stage2/venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000
               Restart=always
 
               [Install]
