--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -63,7 +63,7 @@ jobs:
 
             # Create a systemd service for FastAPI
             echo "*** 🛠 Creating systemd service for FastAPI... ***"
-            cat <<EOF | sudo tee /etc/systemd/system/fastapi.service
+            sudo tee /etc/systemd/system/fastapi.service > /dev/null <<EOF
               [Unit]
               Description=FastAPI Application
               After=network.target
@@ -72,8 +72,7 @@ jobs:
               User=ubuntu
               Group=ubuntu
               WorkingDirectory=/home/${{ vars.USER }}/hng12-stage2
-              ExecStart=/home/${{ vars.USER }}/hng12-stage2/venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000
-              Restart=always
+              ExecStart=/home/${{ vars.USER }}/hng12-stage2/venv/bin/uvicorn main:app --host
 
               [Install]
               WantedBy=multi-user.target
