--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -63,26 +63,7 @@ jobs:
 
             # Create a systemd service for FastAPI
             echo "*** 🛠 Creating systemd service for FastAPI... ***"
-            sudo tee /etc/systemd/system/fastapi.service > /dev/null <<EOF
-              [Unit]
-              Description=FastAPI Application
-              After=network.target
-
-              [Service]
-              User=ubuntu
-              Group=ubuntu
-              WorkingDirectory=/home/${{ vars.USER }}/hng12-stage2
-              ExecStart=/home/${{ vars.USER }}/hng12-stage2/venv/bin/uvicorn main:app --host
-
-              [Install]
-              WantedBy=multi-user.target
-            EOF
-
-            # Reload systemd, enable and start FastAPI service
-            echo "*** 🔄 Starting FastAPI service... ***"
-            sudo systemctl daemon-reload
-            sudo systemctl enable fastapi
-            sudo systemctl restart fastapi
+            sudo cp fastapi.service /etc/systemd/system/fastapi.service
 
             # Configure Nginx as a reverse proxy
             echo "*** 🛠 Configuring Nginx... ***"
@@ -106,15 +87,19 @@ jobs:
             sudo systemctl restart nginx
 
             # Open firewall ports
-            echo "*** 🛠 Allowing necessary ports through UFW... ***"
-            sudo ufw allow 'Nginx Full'
-            sudo ufw allow 8000
-            sudo ufw enable
+            # echo "*** 🛠 Allowing necessary ports through UFW... ***"
+            # sudo ufw allow 'Nginx Full'
+            # sudo ufw allow 8000
+            # sudo ufw enable
+
+            # Reload systemd, enable and start FastAPI service
+            echo "*** 🔄 Starting FastAPI service... ***"
+            sudo systemctl daemon-reload
+            sudo systemctl enable fastapi
+            sudo systemctl restart fastapi
 
             # Display status
             echo "*** 🚀 Deployment completed! ***"
-            sudo systemctl daemon-reload
-            sudo systemctl restart fastapi
             sudo systemctl status fastapi --no-pager
           EOF
 
