apply fix to cd

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -59,28 +59,15 @@ jobs:
             source venv/bin/activate
             pip install --upgrade pip
             pip install -r requirements.txt
-
-            # Create a systemd service for FastAPI
-            echo "*** 🛠 Creating systemd service for FastAPI... ***"
+            
+            # Configure a systemd service for FastAPI
+            echo "*** 🛠 Configure systemd service for FastAPI... ***"
             sudo cp fastapi.service /etc/systemd/system/fastapi.service
 
             # Configure Nginx as a reverse proxy
             echo "*** 🛠 Configuring Nginx... ***"
-            sudo tee /etc/nginx/sites-available/default > /dev/null <<EOF
-              server {
-                  listen 80;
-                  server_name _;
-
-                  location / {
-                      proxy_pass http://127.0.0.1:8000;
-                      proxy_set_header Host \$host;
-                      proxy_set_header X-Real-IP \$remote_addr;
-                      proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                      proxy_set_header X-Forwarded-Proto \$scheme;
-                  }
-              }
-              EOF
-
+            sudo cp default /etc/nginx/sites-available/default
+            
             # Enable the Nginx configuration
             sudo ln -sf /etc/nginx/sites-available/default /etc/nginx/sites-enabled/
             sudo systemctl restart nginx
